--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 :root {
-  --primary-clr: #b38add;
+  --primary-clr: hsl(145, 40%, 39%);
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Signika", sans-serif;
+}
+/* nice scroll bar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #9a9a9a;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--primary-clr);
+  border-radius: 50px;
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e2e1dc;
+  padding-bottom: 30px;
+  background-color: #f4f4f4;
 }
-
 .container {
   position: relative;
   width: 1200px;
@@ -25,15 +37,14 @@ body {
   padding: 5px;
   color: #fff;
   display: flex;
-  border-radius: 10px;
-  background-color: navy;
-}
 
+  border-radius: 10px;
+  background-color: hsla(78, 35%, 59%, 0.885);
+}
 .left {
-  width: 90%;
+  width: 60%;
   padding: 20px;
 }
-
 .calendar {
   position: relative;
   width: 100%;
@@ -42,12 +53,12 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  color: gray;
+  color: #4a573e;
   border-radius: 5px;
   background-color: #fff;
 }
-
-.calendar::before,
+/* set after behind the main element */
+/* .calendar::before,
 .calendar::after {
   content: "";
   position: absolute;
@@ -56,16 +67,14 @@ body {
   width: 12px;
   height: 97%;
   border-radius: 0 5px 5px 0;
-  background-color: #c1c1c1;
+  background-color: #b4c5add7;
   transform: translateY(-50%);
 }
-
 .calendar::before {
   height: 94%;
   left: calc(100% + 12px);
-  background-color: rgb(153, 153, 153);
-}
-
+  background-color: #8b9886d7;
+} */
 .calendar .month {
   width: 100%;
   height: 150px;
@@ -77,17 +86,14 @@ body {
   font-weight: 500;
   text-transform: capitalize;
 }
-
 .calendar .month .prev,
 .calendar .month .next {
   cursor: pointer;
 }
-
 .calendar .month .prev:hover,
 .calendar .month .next:hover {
   color: var(--primary-clr);
 }
-
 .calendar .weekdays {
   width: 100%;
   height: 100px;
@@ -99,15 +105,13 @@ body {
   font-weight: 500;
   text-transform: capitalize;
 }
-
-.calendar .weekdays div {
+.weekdays div {
   width: 14.28%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .calendar .days {
   width: 100%;
   display: flex;
@@ -118,7 +122,6 @@ body {
   font-weight: 500;
   margin-bottom: 20px;
 }
-
 .calendar .days .day {
   width: 14.28%;
   height: 90px;
@@ -129,24 +132,33 @@ body {
   color: var(--primary-clr);
   border: 1px solid #f5f5f5;
 }
+.calendar .days .day:nth-child(7n + 1) {
+  border-left: 2px solid #f5f5f5;
+}
+.calendar .days .day:nth-child(7n) {
+  border-right: 2px solid #f5f5f5;
+}
+.calendar .days .day:nth-child(-n + 7) {
+  border-top: 2px solid #f5f5f5;
+}
+.calendar .days .day:nth-child(n + 29) {
+  border-bottom: 2px solid #f5f5f5;
+}
 
-.calendar .day:not(.prev-date, .next-date):hover {
+.calendar .days .day:not(.prev-date, .next-date):hover {
   color: #fff;
   background-color: var(--primary-clr);
 }
-
 .calendar .days .prev-date,
 .calendar .days .next-date {
-  color: #b3b3b3;
+  color: #3c9a67c0;
 }
-
 .calendar .days .active {
   position: relative;
   font-size: 2rem;
   color: #fff;
   background-color: var(--primary-clr);
 }
-
 .calendar .days .active::before {
   content: "";
   position: absolute;
@@ -154,17 +166,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 0 10px 1px var(--primary-clr);
+  box-shadow: 0 0 10px 2px var(--primary-clr);
 }
-
 .calendar .days .today {
   font-size: 2rem;
 }
-
 .calendar .days .event {
   position: relative;
 }
-
 .calendar .days .event::after {
   content: "";
   position: absolute;
@@ -176,20 +185,16 @@ body {
   transform: translateX(-50%);
   background-color: var(--primary-clr);
 }
-
-.calendar .event:hover::after {
+.calendar .days .day:hover.event::after {
   background-color: #fff;
 }
-
-.calendar .active.event::after {
+.calendar .days .active.event::after {
   background-color: #fff;
   bottom: 20%;
 }
-
-.calendar .active.event {
+.calendar .days .active.event {
   padding-bottom: 10px;
 }
-
 .calendar .goto-today {
   width: 100%;
   height: 50px;
@@ -201,7 +206,6 @@ body {
   margin-bottom: 20px;
   color: var(--primary-clr);
 }
-
 .calendar .goto-today .goto {
   display: flex;
   align-items: center;
@@ -209,7 +213,6 @@ body {
   overflow: hidden;
   border: 1px solid var(--primary-clr);
 }
-
 .calendar .goto-today .goto input {
   width: 100%;
   height: 30px;
@@ -218,8 +221,8 @@ body {
   border-radius: 5px;
   padding: 0 20px;
   color: var(--primary-clr);
+  border-radius: 5px;
 }
-
 .calendar .goto-today button {
   padding: 5px 10px;
   border: 1px solid var(--primary-clr);
@@ -228,14 +231,328 @@ body {
   cursor: pointer;
   color: var(--primary-clr);
 }
-
 .calendar .goto-today button:hover {
   color: #fff;
   background-color: var(--primary-clr);
 }
-
 .calendar .goto-today .goto button {
   border: none;
   border-left: 1px solid var(--primary-clr);
-  border-radius: ;
+  border-radius: 0;
+}
+.container .right {
+  position: relative;
+  width: 40%;
+  min-height: 100%;
+  padding: 20px 0;
+}
+
+.right .today-date {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 40px;
+  padding-left: 70px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+}
+.right .today-date .event-day {
+  font-size: 2rem;
+  font-weight: 500;
+}
+.right .today-date .event-date {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ffffff;
+}
+.events {
+  width: 100%;
+  height: 100%;
+  max-height: 600px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  padding-left: 4px;
+}
+.events .event {
+  position: relative;
+  width: 95%;
+  min-height: 70px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
+  padding: 0 20px;
+  padding-left: 50px;
+  color: #fff;
+  background: linear-gradient(90deg, #1c4d20, transparent);
+  cursor: pointer;
+}
+/* even event */
+.events .event:nth-child(even) {
+  background: transparent;
+}
+.events .event:hover {
+  background: linear-gradient(90deg, var(--primary-clr), transparent);
+}
+.events .event .title {
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+}
+.events .event .title .event-title {
+  font-size: 1rem;
+  font-weight: 400;
+  margin-left: 20px;
+}
+.events .event i {
+  color: #5d9162;
+  font-size: 0.5rem;
+}
+.events .event:hover i {
+  color: #fff;
+}
+.events .event .event-time {
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: #ffffff;
+  margin-left: 15px;
+  pointer-events: none;
+}
+.events .event:hover .event-time {
+  color: #fff;
+}
+/* add tick in event after */
+.events .event::after {
+  content: "✓";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  font-size: 3rem;
+  line-height: 1;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.3;
+  color: var(--primary-clr);
+  transform: translateY(-50%);
+}
+.events .event:hover::after {
+  display: flex;
+}
+.add-event {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  color: #627161;
+  border: 2px solid #627161;
+  opacity: 0.5;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+.add-event:hover {
+  opacity: 1;
+}
+.add-event i {
+  pointer-events: none;
+}
+.events .no-event {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #283327;
+}
+.add-event-wrapper {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  width: 90%;
+  max-height: 0;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color: #fff;
+  transform: translateX(-50%);
+  transition: max-height 0.5s ease;
+}
+.add-event-wrapper.active {
+  max-height: 300px;
+}
+.add-event-header {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  color: #374f3d;
+  border-bottom: 1px solid #f5f5f5;
+}
+.add-event-header .close {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.add-event-header .close:hover {
+  color: var(--primary-clr);
+}
+.add-event-header .title {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.add-event-body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 20px;
+}
+.add-event-body .add-event-input {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.add-event-body .add-event-input input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #f5f5f5;
+  padding: 0 10px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #374f3a;
+}
+.add-event-body .add-event-input input::placeholder {
+  color: #a5a5a5;
+}
+.add-event-body .add-event-input input:focus {
+  border-bottom: 1px solid var(--primary-clr);
+}
+.add-event-body .add-event-input input:focus::placeholder {
+  color: var(--primary-clr);
+}
+.add-event-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+.add-event-footer .add-event-btn {
+  height: 40px;
+  font-size: 1rem;
+  font-weight: 500;
+  outline: none;
+  border: none;
+  color: #fff;
+  background-color: var(--primary-clr);
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  border: 1px solid var(--primary-clr);
+}
+.add-event-footer .add-event-btn:hover {
+  background-color: transparent;
+  color: var(--primary-clr);
+}
+
+/* media queries */
+
+@media screen and (max-width: 1000px) {
+  body {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .container {
+    min-height: 100vh;
+    flex-direction: column;
+    border-radius: 0;
+  }
+  .container .left {
+    width: 100%;
+    height: 100%;
+    padding: 20px 0;
+  }
+  .container .right {
+    width: 100%;
+    height: 100%;
+    padding: 20px 0;
+  }
+  .calendar::before,
+  .calendar::after {
+    top: 100%;
+    left: 50%;
+    width: 97%;
+    height: 12px;
+    border-radius: 0 0 5px 5px;
+    transform: translateX(-50%);
+  }
+  .calendar::before {
+    width: 94%;
+    top: calc(100% + 12px);
+  }
+  .events {
+    padding-bottom: 340px;
+  }
+  .add-event-wrapper {
+    bottom: 100px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .calendar .month {
+    height: 75px;
+  }
+  .calendar .weekdays {
+    height: 50px;
+  }
+  .calendar .days .day {
+    height: 40px;
+    font-size: 0.8rem;
+  }
+  .calendar .days .day.active,
+  .calendar .days .day.today {
+    font-size: 1rem;
+  }
+  .right .today-date {
+    padding: 20px;
+  }
+}
+
+.credits {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 10px;
+  font-size: 12px;
+  color: #000000;
+  background-color: #f4f4f4;
+}
+.credits a {
+  color: #000000;
+  text-decoration: none;
+  font-weight: 600;
+}
+.credits a:hover {
+  text-decoration: underline;
 }
